--- a/app/theme/layout.css
+++ b/app/theme/layout.css
@@ -4,6 +4,9 @@ body, #app {
   width: 100%;
   height: 100%;
   margin: 0;
+  -webkit-user-select: none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: transparent;
 }
 
 .app-bar h1 {
