--- a/app/theme/layout.css
+++ b/app/theme/layout.css
@@ -12,3 +12,28 @@ body, #app {
 .app-bar h1 {
   text-align: center;
 }
+
+.PageRouter-PageContainer {
+  transform: translate3d(0, 0, 0);
+  box-shadow: 0 0 8px rgba(0,0,0, .3);
+}
+
+.PageRouterTransitionFromRight-enter {
+  transform: translate3d(100%, 0, 0);
+}
+
+.PageRouterTransitionFromRight-enter.PageRouterTransitionFromRight-enter-active {
+  transform: translate3d(0, 0, 0);
+  transition: all .28s ease;
+}
+
+.PageRouterTransitionFromRight-leave {
+  transform: translate3d(0, 0, 0);
+  pointer-events: none;
+}
+
+.PageRouterTransitionFromRight-leave.PageRouterTransitionFromRight-leave-active {
+  transform: translate3d(100%, 0, 0);
+  transition: all .28s ease;
+  pointer-events: none;
+}
